--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Explorer: <select id="ExplorerSelect" title="This explorer will be used while yo
 <option value="https://blockchair.com/bitcoin/address/">Blockchair.com</option>
 <option value="https://live.blockcypher.com/btc/address/">BLOCKCYPHER.com</option>
 <option value="https://www.blockchain.com/btc/address/">Blockchain.com</option>
-<option value="https://explorer.viabtc.com/btc/address/">ViaBTC.com</option>
+<option value="https://blockstream.info/address/">Blockstream</option>
 <option value="https://explorer.bitcoin.com/btc/address/">Bitcoin.com</option>
 </select>
 
